--- a/README
+++ b/README
@@ -1,12 +1,12 @@
-witch Linux version 0.00
+witch version 0.00
 
+(Run at your own risk.  Strongly advised to read and debug if necessary before attempting to run. ~ digit)
 
-(Warning,  This will probaly most likely cause damage to your system.  It might not even run.  Not for the faint hearted.)
-(Don't you beleave me?  Im serious,  I probaly wont even run the script myself for ages to build a system!!!)
+(Warning,  This will probaly most likely cause damage to your system.  It might not even run.  Not for the faint hearted. ~jony123)
+(Don't you beleave me?  Im serious,  I probaly wont even run the script myself for ages to build a system!!! ~jony123)
+(You still want to try,  Well I cant stop you ~jony123)
 
-(You still want to try,  Well I cant stop you)
-
-To run the witch Linux installer script simply exicute it on a command line.  
+To run the witch installer script simply exicute it on a command line.  
 
 	chmod +x witchcraft*.sh
 	./witchcraft*.sh
@@ -17,4 +17,4 @@ or
 	
 	
 
-See HISTORY and philoshophy for more infomation about witch Linux.
+See HISTORY, philoshophy and witchsites for more infomation about witch.
