idk, minor tweakages as i thought about larger issues.  ~ also noted, some line breaks may have appeared from improper use of nano.  oops

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+refactorise branch.
+reorganising functions. ~ to be merged back with main once sorted, and used for any other refunctionising of the witchcraft script later on too.
+
 what is witch?  what is it's history?
 witch is a gnu|linux distribution that started from a conversation mainly between "Him" and "digitteknohippie" in crunchbang's irc.  the inaugeral line from Him went something like this: "you should create a distro called witch, so folks could burn them [to cd]", to which digitteknohippie took great liking, in a monty python sort of way, and having already been mulling over many ideas*(elaborated on bellow) for distros, decided to go for it.  within a couple hours, steps were taken with SLAX, towards these ideas, with the release of witch alpha1.  it didnt work.  about a week after that, a virtualbox debian "alpha2" came along.  and alpha3 shortly after that.  alpha 4 used debian-live-helper, and thus was a live-installer iso you could actually burn to cd. 
 by this point, a clearer vision of the releases digit[teknohippie] wanted to make had formed:  rowan (the base version, called "rowan", because the rowan tree is said to ward off evil, specifically, in this context, the evil of bloat), willow (a slightly more convenient but still lightweight version, like rowan, named after a tree, with more flex) and jamella (a showcase of tiling window managers, named after the npc from act4 of diablo2, who had a big book of tricks). 
