got a bit spammy n added a link to the chat at start of readme

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 witch version 0.00
+come to a witch chat here: http://wastedartist.com/distros/witch/witchat.html
+(that's where all the action happens.  lurkers welcome.)
 
 (Run at your own risk.  Strongly advised to read and debug if necessary before attempting to run. ~ digit)
 
