--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+~ HEAVY REFACTOR-LIFTING DONE, please help (or pester digit) to clean up comments etc. ~
+
 witch version 0.00
 come to a witch chat here: http://wastedartist.com/distros/witch/witchat.html
 (that's where all the action happens.  lurkers welcome.)
