--- a/README
+++ b/README
@@ -1,6 +1,13 @@
+github.com/Digit/witch README
+=============================
+
 this github repository is mainly for witchcraft, but will gladly accomodate any and all other projects reasonably on-topic for witch.
 
 this is digit's github, you are free (and encouraged) to make your own witch repos too, though digit will probably add you as contributor here, once you've hung around in #witchlinux on irc.freenode.net for a bit.
+
+
+about witch, and witchcraft
+===========================
 
 witchcraft is where /most/ of the action is at these days.  here's my notion for it:
 	http://ompldr.org/vaTdvcg/digitswitchcraftnotion2013april.png
